@@ -1,6 +1,7 @@
 Changes in 3.1.2
 ================
 * FIX: Option "vol dbpath" was broken in 3.1.1
+* FIX: Spotlight: file modification date, bug #545
 
 Changes in 3.1.1
 ================
